unpackaged/main/default/objects/Assessment__c/Assessment__c.object-meta.xml
<CustomObject>
    <description>For the board demo only, can be removed after the demo</description>
    <label>Assessment</label>
    <nameField>
        <label>Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>