unpackaged/main/default/objects/Assessment__c/fields/Did_you_feel_hopeless__c.field-meta.xml
<CustomField>
    <fullName>Did_you_feel_hopeless__c</fullName>
    <label>Did you feel hopeless</label>
    <length>255</length>
    <type>Text</type>
</CustomField>