unpackaged/main/default/objects/Assessment__c/fields/Did_you_feel_restless_or_fidgety__c.field-meta.xml
<CustomField>
    <fullName>Did_you_feel_restless_or_fidgety__c</fullName>
    <label>Did you feel restless or fidgety</label>
    <length>255</length>
    <type>Text</type>
</CustomField>