unpackaged/main/default/objects/Assessment__c/fields/Did_you_feel_tired_for_no_good_reaso__c.field-meta.xml
<CustomField>
    <fullName>Did_you_feel_tired_for_no_good_reaso__c</fullName>
    <label>Did you feel nervous?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>